--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "A proxy middleware app ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node v1/proxy.js"
   },
   "author": "Elvyn M",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "package.json": "^2.0.1"
   },
   "devDependencies": {
     "http-proxy-middleware": "^1.0.6"
