--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "package.json": "^2.0.1"
-  },
-  "devDependencies": {
+    "package.json": "^2.0.1",
     "http-proxy-middleware": "^1.0.6"
-  }
+  },
 }
